# axiom

./: Cargo.toml  LICENSE-APACHE.txt  Q  README.md  session-prolog-2026-04-12.md
axiom-hypothes/: Cargo.toml
axiom-hypothes/src/: lib.rs  main.rs
axiom-indoos/: Cargo.toml
axiom-indoos/src/: induction.rs  lib.rs  main.rs
axiom-parser/: Cargo.toml
axiom-parser/src/: lib.rs
axiom-prolog/: Cargo.toml
axiom-prolog/src/: lib.rs  main.rs
axiom-syntalog/: Cargo.toml
axiom-syntalog/src/: lib.rs  parse.rs
axiom_parser/: Cargo.toml
axiom_parser/src/: lib.rs
formalisms/: Cargo.toml
formalisms/src/: derivations.rs  lib.rs  proofs.rs
src/: fix for substitution command  helpers.rs  main.rs
syntalog/: Cargo.toml  SYNTALOG.md
syntalog/src/: lib.rs  parse.rs
