[workspace]
members = [".", "formalisms", "axiom_parser", "syntalog"]

[package]
name = "axiom"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
formalisms = { path = "formalisms" }
axiom_parser = { path = "axiom_parser" }
tabled = "0.20.0"
