[workspace]
members = [".", "formalisms", "axiom-parser", "axiom-syntalog", "axiom-prolog", "axiom-hypothes"]

[package]
name = "axiom"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
formalisms = { path = "formalisms" }
axiom-parser = { path = "axiom-parser" }
axiom-syntalog = { path = "axiom-syntalog" }
tabled = "0.20.0"
